Add Feature RoomTypes and Services

--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -41,6 +41,7 @@
 	  <Folder Include="Areas\Admin\Data\" />
 	  <Folder Include="Resources\Controllers\" />
 	  <Folder Include="Resources\Models\" />
+	  <Folder Include="Views\Home\" />
 	</ItemGroup>
 	<ItemGroup>
 	  <None Include="wwwroot\lib\ckeditor\.github\ISSUE_TEMPLATE" />
