--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -46,6 +46,10 @@
 	  <None Include="wwwroot\lib\ckeditor\.github\ISSUE_TEMPLATE" />
 	</ItemGroup>
 	<ItemGroup>
+	  <Content Update="Views\Home\Index.cshtml">
+	    <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+	    <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+	  </Content>
 	  <Content Update="wwwroot\favicon.ico">
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	  </Content>
