--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -6,9 +6,17 @@
 	</PropertyGroup>
 	<ItemGroup>
 	  <Compile Remove="Areas\Admin\Data\**" />
+	  <Compile Remove="Resources\Controllers\**" />
+	  <Compile Remove="Resources\Models\**" />
 	  <Content Remove="Areas\Admin\Data\**" />
+	  <Content Remove="Resources\Controllers\**" />
+	  <Content Remove="Resources\Models\**" />
 	  <EmbeddedResource Remove="Areas\Admin\Data\**" />
+	  <EmbeddedResource Remove="Resources\Controllers\**" />
+	  <EmbeddedResource Remove="Resources\Models\**" />
 	  <None Remove="Areas\Admin\Data\**" />
+	  <None Remove="Resources\Controllers\**" />
+	  <None Remove="Resources\Models\**" />
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="ClosedXML" Version="0.102.2" />
@@ -42,10 +50,6 @@
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\BusinessLogic\BusinessLogic.csproj" />
-	</ItemGroup>
-	<ItemGroup>
-	  <Folder Include="Resources\Controllers\" />
-	  <Folder Include="Resources\Models\" />
 	</ItemGroup>
 	<ItemGroup>
 	  <None Include="wwwroot\lib\ckeditor\.github\ISSUE_TEMPLATE" />
