--- a/BusinessLogic/BusinessLogic.csproj
+++ b/BusinessLogic/BusinessLogic.csproj
@@ -7,6 +7,7 @@
 	<ItemGroup>
 		<PackageReference Include="AutoMapper" Version="12.0.1" />
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+		<PackageReference Include="ClosedXML" Version="0.102.2" />
 		<PackageReference Include="Cronos" Version="0.8.0" />
 		<PackageReference Include="EPPlus" Version="7.0.6" />
 		<PackageReference Include="Hangfire.Core" Version="1.8.7" />
