--- a/BusinessLogic/BusinessLogic.csproj
+++ b/BusinessLogic/BusinessLogic.csproj
@@ -29,6 +29,8 @@
 		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
 		<PackageReference Include="MimeKit" Version="4.3.0" />
 		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
+		<PackageReference Include="QRCoder" Version="1.4.1" />
+		<PackageReference Include="System.Drawing.Common" Version="8.0.5" />
 		<PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.7" />
 	</ItemGroup>
 	<ItemGroup>
