--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -40,6 +40,7 @@
 		<PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="8.0.1" />
 		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.0" />
+		<PackageReference Include="QRCoder" Version="1.4.1" />
 		<PackageReference Include="Serilog.Enrichers.Environment" Version="2.3.0" />
 		<PackageReference Include="Serilog.Extensions.Hosting" Version="8.0.0" />
 		<PackageReference Include="Serilog.Formatting.Compact" Version="2.0.0" />
@@ -47,6 +48,7 @@
 		<PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
 		<PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
 		<PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+		<PackageReference Include="System.Drawing.Common" Version="8.0.5" />
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\BusinessLogic\BusinessLogic.csproj" />
